# TEA

./: .gitignore  .taurignore  README.md  index.html  package-lock.json  package.json  settings.json  tailwind.config.cjs
src/: App.tsx  index.tsx  main.tsx  style.css
src-tauri/: .env  Cargo.toml  main.db  main.db-journal  settings.json  tauri.conf.json
src-tauri/migrations/2023-02-17-201613_initial/: down.sql  up.sql
src-tauri/src/: main.rs
src-tauri/src/db/: commands.rs  crud.rs  migrations.rs  mod.rs  models.rs  notes.rs  operations.rs  schema.rs
src-tauri/src/db/historial/: initial.txt
src-tauri/src/db/models/: base.rs  kanban_tickets.rs  mod.rs  notes.rs  pros_cons.rs  schedules.rs  tasks.rs
src-tauri/src/files/: crud.rs  mod.rs  settings.rs
src-tauri/tests/: test_files.rs
src/apps/: index.ts
src/components/AppsBar/: AppsBar.tsx
src/constants/: Apps.ts  SideBarIcons.tsx  testConstants.tsx
src/hooks/: useCurrentApp.tsx  useSwitchTheme.tsx
src/layouts/: Dashboard.tsx
src/managers/: AppManager.ts  ItemsManager.ts  LocalStorageManager.ts  SessionStorageManager.ts  ThemeManager.ts  manageApp.ts  manageLocalStorage.ts  manageTheme.ts
src/models/: Alias.ts  Apps.tsx  BaseModel.ts  BaseModel.tsx  KanbanTicket.tsx  Note.tsx  Project.tsx  ProsCons.ts  Schedule.ts
src/recoil/: base.recoil.ts  settings.recoil.ts
src/store/: manager.ts  store.ts
src/styles/: layout.ts
src/types/: Files.ts  base.ts  tasks.ts
src/utils/: constants.ts  general.ts  helpers.ts  manageApp.ts  manageLocalStorage.ts  manageLocalStorage.tsx  manageTheme.ts
(+72 files in other folders)
